[package]
name = "jsonrpc_v2_client"
version = "0.1.0"
authors = ["jhaboic <josiphaboic@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.72"
async-std = { version = "1.10.0" }