[package]
name = "jsonrpc_v2_client"
version = "0.2.1"
authors = ["jhaboic <josiphaboic@gmail.com>"]
edition = "2021"
repository = "https://github.com/BitFields/jsonrpc_v2_client"
keywords = ["jsonrpc", "client", "rpc", "json"]
description = "JSONRPC Client based on async-std"
license = "Apache-2.0"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.72"
async-std = { version = "1.10.0" }
log = "0.4.14"